// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusPointsAvailabilityVanilla should render correctly 1`] = `
<Styled(View)>
  <Styled(TouchableOpacity)
    index={0}
    onPress={[Function]}
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="#4a4a4a"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs10"
      fontWeight="extrabold"
      letterSpacing="ls071"
      margin={null}
      numberOfLines={null}
      text="Available For Future Use"
      textAlign="center"
      textDecoration={null}
    />
  </Styled(TouchableOpacity)>
  <Styled(View)
    index={1}
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="#4a4a4a"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs10"
      fontWeight="extrabold"
      letterSpacing="ls071"
      margin={null}
      numberOfLines={null}
      text="Applied to Order"
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with 1 bonus point 1`] = `
<Styled(View)>
  <Styled(TouchableOpacity)
    index={0}
    onPress={[Function]}
  >
    <Styled(BodyCopy)
      accessibilityText=""
      color="#4a4a4a"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs10"
      fontWeight="extrabold"
      letterSpacing="ls071"
      margin={null}
      numberOfLines={null}
      text="Available For Future Use"
      textAlign="center"
      textDecoration={null}
    />
  </Styled(TouchableOpacity)>
</Styled(View)>
`;
